@@ -413,6 +413,12 @@ public:
                 window_invalidate_by_class(WC_GUEST_LIST);
                 break;
 
+            case INTENT_ACTION_UPDATE_GUEST_COUNT:
+                gToolbarDirtyFlags |= BTM_TB_DIRTY_FLAG_PEEP_COUNT;
+                window_invalidate_by_class(WC_GUEST_LIST);
+                window_invalidate_by_class(WC_PARK_INFORMATION);
+                break;
+
             case INTENT_ACTION_UPDATE_PARK_RATING:
                 gToolbarDirtyFlags |= BTM_TB_DIRTY_FLAG_PARK_RATING;
                 window_invalidate_by_class(WC_PARK_INFORMATION);
